<resources>
    <string name="andesui_demoapp_app_name">Andes UI</string>
    <string name="loud_large_button">Loud Large Button</string>
    <string name="loud_medium_button">Loud Medium Button</string>
    <string name="loud_small_button">Loud Small Button</string>
    <string name="loud_large_button_programmatic">Loud Large Button Programmatic</string>
    <string name="loud_medium_button_programmatic">Loud Medium Button Programmatic</string>
    <string name="loud_small_button_programmatic">Loud Small Button Programmatic disabled</string>
    <string name="loud_large_button_disabled">Loud large button disabled</string>

    <string name="large_button_left_icon">Large button with left icon</string>
    <string name="large_button_right_icon">Large button with right icon</string>

    <string name="quiet_large_button">Quiet Large Button</string>
    <string name="quiet_medium_button">Quiet Medium Button</string>
    <string name="quiet_small_button">Quiet Small Button</string>
    <string name="quiet_large_button_programmatic">Quiet Large Button Programmatic</string>
    <string name="quiet_medium_button_programmatic">Quiet Medium Button Programmatic</string>
    <string name="quiet_small_button_programmatic">Quiet Small Button Programmatic</string>

    <string name="transparent_large_button">Transparent Large Button</string>
    <string name="transparent_medium_button">Transparent Medium Button</string>
    <string name="transparent_small_button">Transparent Small Button</string>
    <string name="transparent_large_button_programmatic">Transparent Large Button Programmatic</string>
    <string name="transparent_medium_button_programmatic">Transparent Medium Button Programmatic</string>
    <string name="transparent_small_button_programmatic">Transparent Small Button Programmatic</string>

    <string name="andes_loud_buttons_text">Andes Loud Buttons</string>
    <string name="andes_quiet_buttons_text">Andes Quiet Buttons</string>
    <string name="andes_transparent_buttons_text">Andes Transparent Buttons</string>
    <string name="quiet_large_button_disabled">Quiet Large Button Disabled</string>
    <string name="transparent_large_button_disabled">Transparent Large Button Disabled</string>

    <string name="andes_button_showcase">Andes Button Showcase</string>
    <string name="transparent_large_button_programmatic_int">Transparent Large Button Icon Int</string>
    <string name="andes_message_showcase">Andes Message Showcase</string>
    <string name="body_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="title_text">Atención!</string>
    <string name="andes_message_demoapp">Andes Message</string>
    <string name="dismissable">Dismissable</string>
    <string name="andes_message_showcase_change">Update</string>
    <string name="change_text">Title text</string>
    <string name="change_body">Body text</string>
    <string name="change_primary">Primary action text</string>
    <string name="change_secondary">Secondary action text</string>

    <string-array name="state_spinner">
        <item>Neutral</item>
        <item>Success</item>
        <item>Warning</item>
        <item>Error</item>
    </string-array>

    <string-array name="hierarchy_spinner">
        <item>Loud</item>
        <item>Quiet</item>
    </string-array>
</resources>
