<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/andesui_message_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin_vertical"
            android:gravity="center"
            android:text="@string/andes_message_demoapp"
            android:textSize="24sp" />

        <com.mercadolibre.android.andesui.message.AndesMessage
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin_vertical"
            android:layout_marginBottom="@dimen/button_margin_vertical"
            app:andesMessageBodyText="@string/body_text"
            app:andesMessageHierarchy="loud"
            app:andesMessageState="highlight"
            app:andesMessageTitleText="@string/title_text" />

        <Spinner
            android:id="@+id/hierarchy_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:id="@+id/state_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/dismissable_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dismissable"
            />

        <EditText
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/body_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/change_body"
            android:inputType="text" />

        <com.mercadolibre.android.andesui.button.AndesButton
            android:id="@+id/change_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:andesButtonHierarchy="loud"
            app:andesButtonSize="large"
            app:andesButtonText="@string/andes_message_showcase_change"/>




    </LinearLayout>
</ScrollView>
